added download of photos in story
